--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 13.04.2025 14:43:51 | Praha: 21°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 14.04.2025 07:03:20 | Praha: 13°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se šlehačkou</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Medailonky z kuřecích prsou v sýrovém těstíčku, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček na houbách, dušená jasmínová rýže</td><td class="menuPrice">182,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené králičí stehno na divokém koření, bramborové knedlíky maštěné cibulkou, špenát</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s restovanou anglickou slaninou, cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">182,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka, hráškové pyré s máslem a sýrem Gran Moravia, vařené vejce</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">6 ks</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku, salát coleslav</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli s kuřecím masem, kukuřicí a anglickou slaninou ve smetanové omáčce, strouhaný sýr Gran Moravia</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti zapečený sýrem a šunkou, pečené brambory s plátky česneku</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Burger s trhaným vepřovým masem, trhanými listy salátu, cibulí, tomaty, sýrem s mexickým dresinkem, hranolky, tatarka</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Biftek z pravé hovězí svíčkové na smetanové omáčce s barevným pepřem, pečené brambory Grenaile</td><td class="menuPrice">227,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14 Kč. Staropramen 11° za 16 Kč a Staropramen Premiant za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Quesadilla plněná kuřecím masem, sýrem, anglickou slaninou, zeleninou a česnekovým dresinkem, hranolky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">182,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky v mrkvi, vařené brambory s máslem a šnytlíkem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Pečené rolované vepřové karé plněné anglickou slaninou, sušenými rajčaty a klobásou, sýrové grusetky promíchané česneko- smetanovou omáčkou</td><td class="menuPrice">192,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s boloňským ragú, strouhaný sýr Gran Moravia</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z pravé hovězí svíčkové, restované fazolové lusky s anglickou slaninou, hranolky</td><td class="menuPrice">227,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Teplý linecký jablkový koláč se šlehačkou, karamelem a vanilkovou zmrzlinou</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">NOVINKY NA ČEPU</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk.4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Budvar REDIX alk. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkovaný alk. 5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango - limeta max. alk.0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda - Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Teplý linecký jablkový koláč se šlehačkou, karamelem a vanilkovou zmrzlinou</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk. 4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Budvar REDIX ALK. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkový alk.5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango-limeta max. alk. 0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda -Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -24,15 +27,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -42,9 +46,34 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 13.4.2025 </div>
+<div class="nadpis">Pondělí 14.4.2025 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Cuketový krém s máslovým toustem 1, 7</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Kuřecí steak na červeném kari, s čerstvou zeleninou, rýže Basmati 1</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Steak z lososa na barevném pepři, šťouchané brambory s baby karotkou na másle 1, 4, 7</div>
+<div class="cena">190 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>180g Smažený Hermelím plněný šunkou, brambory, tatarka 1, 3, 7, 10</div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Zeleninový salát s parmskou šunkou, medovo-hořčičný dresing, bageta 1, 10</div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -55,9 +84,29 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 13.4.2025 </div>
+<div class="nadpis">Pondělí 14.4.2025 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Květáková</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>250g Těstoviny s gorgonzolou</div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí nudličky na paprice, rýže</div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>200g Caprese salát s rucolou a balsamicem</div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
